add » to some buttons

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: TALOS — Taiwan Austronesian Languages Operating System
 <div class="hero-unit">
   <h1>TALOS</h1> <small>Taiwan Austronesian Languages Operating System</small>
   <p>Endangered Languages Do Not Die.</p>
-  <p><a class="btn btn-primary btn-large" href="about.html">Learn more</a></p>
+  <p><a class="btn btn-primary btn-large" href="about.html">Learn more »</a></p>
 </div>
 
 <div class="row">
@@ -34,7 +34,7 @@ title: TALOS — Taiwan Austronesian Languages Operating System
   <div class="span6">
     <h2><i class="icon-road"> </i>Milestones</h2>
     <p>A list of our short-term, mid-term and long-term goals.</p>
-    <p><a class="btn" href="milestones.html">Learn more</a></p>
+    <p><a class="btn" href="milestones.html">Learn more »</a></p>
   </div>
   <div class="span6">
     <h2><i class="icon-group"> </i>We need your help</h2>
