--- a/index.html
+++ b/index.html
@@ -1,44 +1,44 @@
 ---
 layout: clean
-title: TALOS — Taiwan Austronesian Languages Operating System
+title: TALOS &mdash; 台灣南島語作業系統
+lang: zh-tw
 ---
-{% include JB/setup %}
 
 <div class="hero-unit">
-  <h1>TALOS</h1> <small>Taiwan Austronesian Languages Operating System</small>
-  <p>Endangered Languages Do Not Die.</p>
-  <p><a class="btn btn-primary btn-large" href="about.html">Learn more »</a></p>
+  <h1>TALOS</h1> <small>台灣南島語作業系統</small>
+  <p>讓語言自由</p>
+  <p><a class="btn btn-primary btn-large" href="/about">簡介 »</a></p>
 </div>
 
 <div class="row">
   <div class="span4">
-    <h2><i class="icon-globe"> </i>ISO Standard</h2>
-    <p>We putting these endangered languages to the same position as mainstream ones by pushing these languages to ISO standard.</p>
+    <h2><i class="icon-globe"></i> ISO 標準</h2>
+    <p>將南島語言在 ISO 標準中確立，以具備跟主流語言相同的地位。</p>
     <p><a class="btn disabled">Coming soon</a></p>
   </div>
 
   <div class="span4">
-    <h2><i class="icon-pencil"> </i>Keyboard Layout</h2>
-    <p>These endangered languages need a way to type in this modern digital world.</p>
+    <h2><i class="icon-pencil"></i> 鍵盤配置</h2>
+    <p>南島語言需要數位時代中的「筆」 &mdash; 鍵盤配置。</p>
     <p><a class="btn disabled">Coming soon</a></p>
   </div>
 
   <div class="span4">
-    <h2><i class="icon-book"> </i>Dictionary</h2>
-    <p>With collabrations of elders and free software tools, we have a basically usable dictionary for these languages.</p>
+    <h2><i class="icon-book"></i> 字典</h2>
+    <p>透過長老與自由軟體工具的配合，我們有一個可用的字典。</p>
     <p><a class="btn disabled">Coming soon</a></p>
   </div>
 </div>
 
 <div class="row">
   <div class="span6">
-    <h2><i class="icon-road"> </i>Milestones</h2>
-    <p>A list of our short-term, mid-term and long-term goals.</p>
-    <p><a class="btn" href="milestones.html">Learn more »</a></p>
+    <h2><i class="icon-road"></i> 里程碑</h2>
+    <p>我們的短期、中期與長期計畫。</p>
+    <p><a class="btn" href="/milestones">Learn more »</a></p>
   </div>
   <div class="span6">
-    <h2><i class="icon-group"> </i>We need your help</h2>
-    <p>This project is currently maintained by few people under low budgets. Therefore, we need your help to vitalize the languages before their deaths.</p>
+    <h2><i class="icon-group"></i> 加入我們</h2>
+    <p>我們相當缺人也缺經費，因此為了避免南島語言消失的危機，我們需要您的協助。</p>
     <p><a class="btn disabled">Coming soon</a></p>
   </div>
 </div>
