--- a/index.html
+++ b/index.html
@@ -4,11 +4,40 @@ title: TALOS &mdash; 台灣南島語作業系統
 lang: zh-tw
 ---
 
-<div class="hero-unit">
-  <h1>TALOS</h1> <small>台灣南島語作業系統</small>
-  <p>讓語言自由</p>
-  <p><a class="btn btn-primary btn-large" href="/about">簡介 »</a></p>
+<div id="myCarousel" class="carousel slide">
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="assets/carousel/img1.png" alt="">
+      <div class="carousel-caption">
+        <a class="btn btn-primary btn-large pull-right" href="/about">簡介 »</a>
+        <h4>TALOS — <small>台灣南島語作業系統</small></h4>
+        <p>讓語言自由</p>
+      </div>
+    </div>
+    <div class="item">
+      <img src="assets/carousel/img2.png" alt="">
+      <div class="carousel-caption">
+        <a class="btn btn-primary btn-large pull-right" href="/about">簡介 »</a>
+        <h4>Second Thumbnail label</h4>
+        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+      </div>
+    </div>
+    <div class="item">
+      <img src="assets/carousel/img3.png" alt="">
+      <div class="carousel-caption">
+        <a class="btn btn-primary btn-large pull-right" href="/about">簡介 »</a>
+        <h4>Third Thumbnail label</h4>
+        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+      </div>
+    </div>
+  </div>
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
 </div>
+
+<script type="text/javascript">
+$('.carousel').carousel({interval: 10000})
+</script>
 
 <div class="row">
   <div class="span4">
