* en/about.md: minor rewording, updating locale list.  * en/index.html: changed ISO standards to locale data work, reworded the sections, enabled participate link.  * en/join.md: Added information how to participate.

--- a/en/index.html
+++ b/en/index.html
@@ -12,20 +12,20 @@ lang: en
 
 <div class="row">
   <div class="span4">
-    <h2><i class="icon-globe"> </i>ISO Standard</h2>
-    <p>We putting these endangered languages to the same position as mainstream ones by pushing these languages to ISO standard.</p>
+    <h2><i class="icon-globe"> </i>Locales</h2>
+    <p>We are collecting locale data and submit the data to the upstream glibc project.</p>
     <p><a class="btn disabled">Coming soon</a></p>
   </div>
 
   <div class="span4">
     <h2><i class="icon-pencil"> </i>Keyboard Layout</h2>
-    <p>These endangered languages need a way to type in this modern digital world.</p>
+    <p>These endangered languages need a way to be typed in this modern digital world.</p>
     <p><a class="btn disabled">Coming soon</a></p>
   </div>
 
   <div class="span4">
-    <h2><i class="icon-book"> </i>Dictionary</h2>
-    <p>With collabrations of elders and free software tools, we have a basically usable dictionary for these languages.</p>
+    <h2><i class="icon-book"> </i>Dictionaries</h2>
+    <p>With the help of language experts and free software tools, we are developing offline dictionaries.</p>
     <p><a class="btn disabled">Coming soon</a></p>
   </div>
 </div>
@@ -38,8 +38,8 @@ lang: en
   </div>
   <div class="span6">
     <h2><i class="icon-group"> </i>We need your help</h2>
-    <p>This project is currently maintained by few people under low budgets. Therefore, we need your help to vitalize the languages before their deaths.</p>
-    <p><a class="btn disabled">Coming soon</a></p>
+    <p>This project is currently maintained by only a few people. Therefore, we need volunteers with open source software background to contribute and to work with the indigenous communities.</p>
+    <p><a class="btn" href="/en/join/">Learn more »</a></p>
   </div>
 </div>
 
